--- a/style.css
+++ b/style.css
@@ -37,7 +37,8 @@ a:active {
 }
 
 button,
-input[type="button"] {
+input[type="button"],
+input[type="file"]+label {
 	background-color: #4ca951;
 	color: white;
 	border: none;
@@ -48,12 +49,14 @@ input[type="button"] {
 }
 
 button:hover,
-input[type="button"]:hover {
+input[type="button"]:hover,
+input[type="file"]+label:hover {
 	background-color: #57d15d;
 }
 
 button:active,
-input[type="button"]:active {
+input[type="button"]:active,
+input[type="file"]+label:active {
 	background-color: #37723a;
 }
 
@@ -65,6 +68,7 @@ input[type="button"] {
 }
 
 input[type="checkbox"],
+input[type="file"],
 input[type="radio"],
 .hide {
 	display: none;
