--- a/canvas/pt2/style.css
+++ b/canvas/pt2/style.css
@@ -16,17 +16,18 @@ body {
 }
 
 #stage {
-	position: absolute;
+	position: fixed;
 	width: 100vw;
 	left: 0;
 	top: 0;
 }
 
 .btn {
-	position: absolute;
+	position: fixed;
 	opacity: 0.6;
 	color: #fff;
-	font: 50px icomoon;
+	font-size: 50px;
+	line-height: 0;
 	right: 15px;
 	top: 15px;
 }
@@ -42,7 +43,7 @@ body {
 }
 
 #cover-dark {
-	position: absolute;
+	position: fixed;
 	opacity: 0.65;
 	width: 100%;
 	height: 100%;
@@ -65,7 +66,7 @@ body {
 .view-config {
 	background-color: #fff;
 	border-radius: 12px;
-	position: absolute;
+	position: fixed;
 	width: 75vmin;
 	height: 75vh;
 	left: 50%;
@@ -120,7 +121,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	position: absolute;
+	position: fixed;
 	width: 90vmin;
 	height: 50vmin;
 	left: 50%;
@@ -130,7 +131,7 @@ body {
 }
 
 #cover-light {
-	position: absolute;
+	position: fixed;
 	opacity: 0.85;
 	width: 100%;
 	height: 100%;
